hdrs = [
    "HartConfig.hpp",
    "WhisperMessage.h",
    "Hart.hpp",
    "Core.hpp",
    "System.hpp",
    "Server.hpp",
    "Interactive.hpp",
    "DecodedInst.hpp",
    "Decoder.hpp",
    "InstEntry.hpp",
    "InstId.hpp",
    "Isa.hpp",
]

cc_library(
    name          = "rvcore",
    srcs          = glob(include = ["*.cpp", "*.hpp"], exclude = ["whisper.cpp"] + hdrs),
    hdrs          = hdrs,
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS"],
    deps          = ["//third_party:nlohmann", "//third_party:elfio", "//third_party:softfloat", "//third_party:linenoise", "//pci:pci"],
    linkopts      = ["-lpthread", "-lz", "-ldl", "-lrt"],
    visibility    = ["//visibility:public"],
)

cc_binary(
    name          = "whisper",
    srcs          = ["whisper.cpp"],
    deps          = [":rvcore"],
    local_defines = ["SOFT_FLOAT", "MEM_CALLBACKS"],
    linkopts      = ["-lboost_program_options", "-rdynamic"],
    visibility    = ["//visibility:public"],
)
